--- a/frontend/app/views/fragments/event/itemHero.scala.html
+++ b/frontend/app/views/fragments/event/itemHero.scala.html
@@ -11,13 +11,8 @@
     }
 }
 
-<div class="event-item" itemscope itemtype="http://schema.org/Event">
+<div class="event-item event-item--hero" itemscope itemtype="http://schema.org/Event">
     <div class="event-item__container">
-        <div class="event-item__media">
-            <a href="/event/@event.id" itemprop="image" content="@event.socialImgUrl">
-                <div class="delayed-image-load" data-src="@event.imgUrl" data-alt="@event.name.text" data-class="responsive-img"></div>
-            </a>
-        </div>
         <div class="event-item__content">
             <div class="event-item__meta">
                 <a href="/event/@event.id" itemprop="url" content="@event.memUrl">
@@ -26,12 +21,22 @@
                     <div class="event-item__location" itemprop="location" itemscope itemtype="http://schema.org/Place">
                         @fragments.event.addressSummary(event)
                     </div>
+                    @for(desc <- event.description) {
+                        <div class="event-item__description" itemprop="description">
+                            @desc.blurb
+                        </div>
+                    }
                     <div class="event-item__footer">
                         @fragments.event.itemMetaAvailability(event)
                         <button class="action-proceed@if(eventType){ action-proceed--@eventType} event-item__action" itemprop="url"></button>
                     </div>
                 </a>
             </div>
+        </div>
+        <div class="event-item__media">
+            <a href="/event/@event.id" itemprop="image" content="@event.socialImgUrl">
+                <div class="delayed-image-load" data-src="@event.imgUrl" data-alt="@event.name.text" data-class="responsive-img"></div>
+            </a>
         </div>
     </div>
 </div>
