--- a/frontend/app/views/patterns/patterns.scala.html
+++ b/frontend/app/views/patterns/patterns.scala.html
@@ -159,6 +159,18 @@
         <a class="action action--fullwidth" href="#">Action</a>
     }
 
+    @pattern("Action Proceed") {
+        <a class="action-proceed" href="#">Action</a>
+    }
+
+    @pattern("Action Proceed - Live") {
+        <a class="action-proceed--live" href="#">Action</a>
+    }
+
+    @pattern("Action Proceed - Masterclass") {
+        <a class="action-proceed--masterclass" href="#">Action</a>
+    }
+
     @pattern("Toggle Component - Button", "JS toggle component") {
         <button class="js-toggle action action--toggle" data-toggle="foo" data-toggle-label="Show less">Show more</button>
         <div id="foo" data-toggle-hidden>This is initially hidden Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius cum consequatur quod inventore, itaque adipisci ut quibusdam illum, deleniti molestiae vel, repudiandae, sunt est eum dolores odit sint deserunt velit!</div>
@@ -254,7 +266,7 @@
     }
 
     @pattern("Event – Hero", "Used to highlight a single event at the top of the /events listing") {
-        @fragments.event.item(eventPortfolio.orderedEvents.head, isHero=true)
+        @fragments.event.itemHero(eventPortfolio.orderedEvents.head)
     }
 
     @pattern("Event – Full", "A standard event, used in a number of places") {
@@ -271,7 +283,7 @@
         <ul class="grid grid--3up">
             @for(event <- eventPortfolio.normal.slice(0, 3)) {
                 <li class="grid__item">
-                    @fragments.event.item(event, false, isMinimal=true)
+                    @fragments.event.itemMinimal(event)
                 </li>
             }
         </ul>
@@ -281,7 +293,7 @@
         <ul class="grid grid--2up">
             @for(event <- eventPortfolio.normal.slice(0, 3)) {
                 <li class="grid__item">
-                    @fragments.event.item(event, false, isMinimal=true, isCard=true)
+                    @fragments.event.itemMinimal(event, isCard=true)
                 </li>
             }
         </ul>
