--- a/frontend/assets/stylesheets/style.scss
+++ b/frontend/assets/stylesheets/style.scss
@@ -78,8 +78,9 @@
 @import 'components/page';
 @import 'components/blocks';
 @import 'components/asides';
+@import 'components/listings';
+@import 'components/header-bar';
 @import 'components/event-items';
-@import 'components/event-listings';
 @import 'components/event-filters';
 @import 'components/event-detail';
 @import 'components/benefits';
