--- a/frontend/assets/stylesheets/components/_from-content-api.scss
+++ b/frontend/assets/stylesheets/components/_from-content-api.scss
@@ -35,7 +35,7 @@
             @include fs-header(3, true);
         }
     }
-    p + h2, ol + h2, ul + h2 {
+    h2 + h2, p + h2, ol + h2, ul + h2 {
         margin-top: rem($gs-gutter * 1.3);
     }
     h3 {
