Add live and masterclass modifiers to action-proceed

--- a/frontend/assets/stylesheets/components/_action.scss
+++ b/frontend/assets/stylesheets/components/_action.scss
@@ -117,30 +117,34 @@
     }
 }
 
-.action-proceed {
+.action-proceed,
+.action-proceed--live,
+.action-proceed--masterclass {
+
+    @include image-replacement();
+
     width: rem(36px);
     height: rem(36px);
     padding: 0 rem(8px) 0 0;
     background-color: transparent;
+    @extend .icon-arrow-right-black;
+    background-position: center center;
 
     @include border-radius(50px);
     border: 1px solid $c-border-neutral;
-
-    @include mq(desktop) {
-        bottom: rem($gs-gutter / 2);
-        right: rem($gs-gutter / 2);
-    }
 
     &:focus {
         outline: 0;
     }
 
-    &:after {
-        @extend .icon-arrow-right-black;
-        content: '';
-        fill: $black;
-        float: right;
-    }
+}
+.action-proceed--live {
+    border-color: $mem-live-top;
+    @extend .icon-arrow-right-live;
+}
+.action-proceed--masterclass {
+    border-color: $mem-mc-top;
+    @extend .icon-arrow-right-masterclass;
 }
 
 /* Actions - Secondary Modifiers
