--- a/frontend/app/views/fragments/form/passwordDetail.scala.html
+++ b/frontend/app/views/fragments/form/passwordDetail.scala.html
@@ -1,16 +1,16 @@
-<fieldset class="fieldset address-fieldset">
+<fieldset class="fieldset">
 
     <div class="fieldset__heading">
-        <h2 class="form__heading">Create password</h2>
-        <div class="form__note">Password required to keep your information secure.</div>
+        <h2 class="fieldset__headline">Create password</h2>
+        <div class="fieldset__note">Password required to keep your information secure.</div>
     </div>
 
     <div class="fieldset__fields js-password-container">
 
-        <div class="form-field">
-            <label class="label" for="user-password">Password</label>
-            <div class="form-field__note form-field__note--left">Between 6 and 20 characters</div>
-            <input class="text-input js-password-strength js-register-password"
+        <div class="form-field form-field--no-margin">
+            <label class="label label--inline" for="user-password">Password</label>
+            <span class="form-note">(between 6 and 20 characters)</span>
+            <input class="input-text js-password-strength js-register-password"
                    type="password"
                    id="user-password"
                    name="password"
@@ -23,6 +23,11 @@
                    data-error-message="Please enter a password"
                    data-validation="length"
                    data-arguments="[6, 20]"/>
+        </div>
+        <div class="password-strength-indicator score-null is-off is-hidden js-password-strength-indicator">
+            <div class="form-note form-note--right form-note--underneath js-password-strength-label">
+            Password strength
+            </div>
         </div>
 
     </div>
