--- a/frontend/app/views/fragments/form/billingAddress.scala.html
+++ b/frontend/app/views/fragments/form/billingAddress.scala.html
@@ -1,21 +1,33 @@
 @(heading: String)
 
-<fieldset class="fieldset js-toggle-billing-address u-h">
-    <div class="address-fieldset__inner">
-        <div class="fieldset__heading">
-            <h2 class="form__heading">@heading</h2>
-        </div>
-        <div class="fieldset__fields">
-            <div class="form-field js-billing-address-container">
-                <label class="label" for="use-delivery-address">
-                    <input class="inside-radio js-billing-input" type="radio" name="address.type" id="use-delivery-address" value="true" checked="checked"/>
-                    <span class="payment-label__title">Use delivery address</span>
-                </label>
-                <label class="label" for="use-billing-address">
-                    <input class="inside-radio js-billing-input" type="radio" name="address.type" id="use-billing-address" value="false"/>
-                    <span class="payment-label__title">Add a different billing address</span>
-                </label>
-            </div>
-        </div>
+@pseudoRadio(title: String) = {
+    <div class="psuedo-radio">
+        <span class="billing-address-choice">@title</span>
     </div>
+}
+
+<fieldset class="fieldset js-toggle-billing-address u-h">
+
+    <div class="fieldset__heading">
+        <h2 class="fieldset__headline">@heading</h2>
+    </div>
+
+    <div class="fieldset__fields">
+
+        <div class="form-field">
+
+            <label class="label" for="use-delivery-address">
+                <input class="is-hidden js-billing-input" type="radio" name="address.type" id="use-delivery-address" value="true" checked="checked"/>
+                @pseudoRadio("Use delivery address")
+            </label>
+
+            <label class="label" for="use-billing-address">
+                <input class="is-hidden js-billing-input" type="radio" name="address.type" id="use-billing-address" value="false"/>
+                @pseudoRadio("Add a different billing address")
+            </label>
+
+        </div>
+
+    </div>
+
 </fieldset>
