--- a/frontend/app/views/joiner/form/payment.scala.html
+++ b/frontend/app/views/joiner/form/payment.scala.html
@@ -1,39 +1,78 @@
-@(tier: com.gu.membership.salesforce.Tier.Tier, userFields: model.PrivateFields,
-marketingChoices: model.StatusFields, passwordExists: Boolean, pageInfo: model.PageInfo)(implicit token: play.filters.csrf.CSRF.Token)
+@(
+    tier: com.gu.membership.salesforce.Tier.Tier,
+    userFields: model.PrivateFields,
+    marketingChoices: model.StatusFields,
+    passwordExists: Boolean,
+    pageInfo: model.PageInfo
+)(implicit token: play.filters.csrf.CSRF.Token)
 
 @import helper._
 
-    @main("Payment | " + tier, isBrochure = true, pageInfo = pageInfo) {
-        <section class="section-payment u-cf">
+@main("Payment | " + tier, pageInfo = pageInfo) {
 
+    <main role="main" class="page-content">
 
-            <form action="@routes.Joiner.joinPaid(tier)" method="POST" id="payment-form" class="form form-primary-container js-stripe-form">
+        <section class="form-header">
+            <h1 class="form-headline">Address & billing</h1>
+            @fragments.joiner.signedInAs(routes.Joiner.enterDetails(tier).url)
+        </section>
 
-            @fragments.form.sectionHeading("Address & billing")
-            <div class="form__signin">
-                @fragments.joiner.signedInAs(routes.Joiner.enterDetails(tier).url)
+        <section class="form-section form-section--no-padding">
+            <div class="form-section__content">
+            @fragments.form.errorMessageDisplay()
+            </div>
+        </section>
+
+        <section class="form-section">
+
+            <div class="form-section__lead-in">
+                @fragments.joiner.joinStepCounter(3, 3)
             </div>
 
-                @fragments.joiner.joinStepCounter(3, 3)
-                @CSRF.formField
-                <input type="hidden" name="tier" class="js-tier-field" value="@tier"/>
-                @fragments.form.errorMessageDisplay()
-                @fragments.form.nameDetail(userFields.firstName, userFields.secondName)
-                @fragments.form.addressDetail("Delivery address", "Once you've joined Guardian Membership we'll send you a welcome pack in the post.", "deliveryAddress", true,
-                userFields.address1, userFields.address2, userFields.address3, userFields.postcode, userFields.address4, userFields.country)
-                @fragments.form.marketingChoices(marketingChoices.receiveGnmMarketing, marketingChoices.receive3rdPartyMarketing)
+            <div class="form-section__content">
+                <form action="@routes.Joiner.joinPaid(tier)" method="POST" id="payment-form" class="form js-stripe-form">
+                    @CSRF.formField
+                    <input type="hidden" name="tier" class="js-tier-field" value="@tier"/>
+                    @fragments.form.nameDetail(userFields.firstName, userFields.secondName)
+                    @fragments.form.addressDetail(
+                        heading = "Delivery address",
+                        note = "Once you've joined Guardian Membership we'll send you a welcome pack in the post.",
+                        formType = "deliveryAddress",
+                        addressRequired = true,
+                        address1 = userFields.address1,
+                        address2 = userFields.address2,
+                        town = userFields.address3,
+                        postcode = userFields.postcode,
+                        county = userFields.address4,
+                        userCountry = userFields.country
+                    )
+                    @fragments.form.marketingChoices(marketingChoices.receiveGnmMarketing, marketingChoices.receive3rdPartyMarketing)
 
-                @if(!passwordExists) {
-                    @fragments.form.passwordDetail()
-                }
+                    @if(!passwordExists) {
+                        @fragments.form.passwordDetail()
+                    }
 
-                @fragments.form.paymentOptions(tier)
-                @fragments.form.billingAddress("Billing address")
-                @fragments.form.addressDetail("", "", "billingAddress", true, userFields.billingAddress1, userFields.billingAddress2, userFields.billingAddress3, userFields.billingPostcode, userFields.billingAddress4, userFields.billingCountry)
-                @fragments.form.cardDetail(tier)
-                @fragments.form.submit("Pay", "now", Some(tier))
-            </form>
+                    @fragments.form.paymentOptions(tier)
+                    @fragments.form.billingAddress("Billing address")
+                    @fragments.form.addressDetail(
+                        formType = "billingAddress",
+                        addressRequired = true,
+                        address1 = userFields.billingAddress1,
+                        address2 = userFields.billingAddress2,
+                        town = userFields.billingAddress3,
+                        postcode = userFields.billingPostcode,
+                        county = userFields.billingAddress4,
+                        userCountry = userFields.billingCountry
+                    )
+                    @fragments.form.cardDetail(tier)
+                    @fragments.form.errorMessageDisplay()
+                    @fragments.form.submit("Pay", "now", Some(tier))
+                </form>
+
+            </div>
 
         </section>
 
-    }
+    </main>
+
+}
