--- a/frontend/app/views/tier/upgrade/upgradeForm.scala.html
+++ b/frontend/app/views/tier/upgrade/upgradeForm.scala.html
@@ -1,23 +1,54 @@
-@(currentTier: com.gu.membership.salesforce.Tier.Tier, targetTier: com.gu.membership.salesforce.Tier.Tier, userFields: model.PrivateFields, pageInfo: model.PageInfo)(implicit token: play.filters.csrf.CSRF.Token)
+@(
+    currentTier: com.gu.membership.salesforce.Tier.Tier,
+    targetTier: com.gu.membership.salesforce.Tier.Tier,
+    userFields: model.PrivateFields,
+    pageInfo: model.PageInfo
+)(implicit token: play.filters.csrf.CSRF.Token)
+
 @import helper._
 
-@main("Change Tier | " + targetTier + " from " + currentTier, isBrochure = true, pageInfo = pageInfo) {
+@main("Change Tier | " + targetTier + " from " + currentTier, pageInfo = pageInfo) {
 
-    <section class="section-payment u-cf">
-        @fragments.form.errorMessageDisplay()
+    <main role="main" class="page-content">
 
-        <form action="@routes.TierController.upgrade(targetTier)" method="POST" id="payment-form" class="form form-primary-container js-stripe-form" data-change-to-tier="@targetTier">
-            @CSRF.formField
+        <section class="page-header">
+            <h1 class="page-headline">Payment</h1>
+            @fragments.joiner.signedInAs(routes.TierController.upgradeConfirm(targetTier).url)
+        </section>
 
-            @fragments.form.sectionHeading("Payment")
-            @fragments.form.addressDetail("Delivery address", "Once you've joined Guardian Membership we'll send you a welcome pack in the post.", "deliveryAddress", true,
-            userFields.address1, userFields.address2, userFields.address3, userFields.postcode, userFields.address4, userFields.country)
+        <section class="form-section form-section--no-padding">
+            <div class="form-section__content">
+            @fragments.form.errorMessageDisplay()
+            </div>
+        </section>
 
-            @fragments.form.paymentOptions(targetTier)
-            @fragments.form.billingAddress("Billing address")
-            @fragments.form.addressDetail("", "", "billingAddress", true, userFields.billingAddress1, userFields.billingAddress2, userFields.billingAddress3, userFields.billingPostcode, userFields.billingAddress4, userFields.billingCountry)
-            @fragments.form.cardDetail(targetTier)
-            @fragments.form.submit("Pay", "now", Some(targetTier))
-        </form>
-    </section>
+        <section class="form-section">
+
+            <div class="form-section__content">
+
+                <form action="@routes.TierController.upgrade(targetTier)" method="POST" id="payment-form"
+                      class="form js-stripe-form" data-change-to-tier="@targetTier">
+                    @CSRF.formField
+                    @fragments.form.addressDetail(
+                        "Delivery address",
+                        "Once you've joined Guardian Membership we'll send you a welcome pack in the post.",
+                        "deliveryAddress", true, userFields.address1, userFields.address2, userFields.address3,
+                        userFields.postcode, userFields.address4, userFields.country
+                    )
+                    @fragments.form.paymentOptions(targetTier)
+                    @fragments.form.billingAddress("Billing address")
+                    @fragments.form.addressDetail(
+                        "", "", "billingAddress", true, userFields.billingAddress1, userFields.billingAddress2,
+                        userFields.billingAddress3, userFields.billingPostcode, userFields.billingAddress4,
+                        userFields.billingCountry
+                    )
+                    @fragments.form.cardDetail(targetTier)
+                    @fragments.form.submit("Pay", "now", Some(targetTier))
+                </form>
+
+            </div>
+
+        </section>
+
+    </main>
 }
