markup changes to steps

--- a/frontend/app/views/fragments/joiner/joinStepCounter.scala.html
+++ b/frontend/app/views/fragments/joiner/joinStepCounter.scala.html
@@ -1,6 +1,5 @@
-@(  CurrentStep: Int,
-    TotalSteps: Int)
+@(CurrentStep: Int, TotalSteps: Int)
 
-    <div class="steps">
-		Step @CurrentStep of @TotalSteps
-	</div>
+<div class="step-counter">
+    Step @CurrentStep of @TotalSteps
+</div>
