--- a/frontend/assets/stylesheets/base/_forms.scss
+++ b/frontend/assets/stylesheets/base/_forms.scss
@@ -1,186 +1,83 @@
 /* Base form styles
    ========================================================================== */
 
-@if $old-ie {
-    // IE 8 won't display webfonts in password fields…
-    [type=password] {
-        font-family: sans-serif !important;
-    }
-}
 
+/* ==========================================================================
+   Form
+   ========================================================================== */
 .form {
-    margin-bottom: rem($gs-baseline * 2);
-    position: relative;
+    border-top: 1px solid $mem-blue;
+}
 
-    > .form__note {
-        position: absolute;
+/* ==========================================================================
+   Form Fieldset
+   ========================================================================== */
+.fieldset {
+    border: 0;
+    padding: 0;
+    margin: 0;
+    border-bottom: 1px solid $c-neutral3;
+    display: table;
+    background-color: $c-neutral8;
+}
 
-        @include mq(desktop) {
-            position: static;
-            float: right;
-            display: block;
-            border-top: rem(1px) solid $c-neutral3;
-            width: rem(gs-span(2) + $gs-gutter);
-        }
+.fieldset--simple {
+    background-color: transparent;
+    border-bottom: 0;
 
-        @include mq(mem-full) {
-            width: rem(gs-span(3));
-        }
-    }
-
-    .terms-info {
-        @include fs-textSans(3);
+    .fieldset__fields {
+        padding-top: rem(5px);
     }
 }
 
-.form__signin {
-    display: block;
-    @include fs-bodyCopy(2);
-
-    @include mq(desktop) {
-        position: absolute;
-        top: rem(9rem);
-        left: rem(gs-span(2));
-    }
-
-    @include mq(mem-full) {
-        left: rem(gs-span(2) + $gs-gutter);
-    }
+.fieldset--no-background {
+    background-color: transparent;
 }
 
-.form__section-heading {
-    @include fs-headline(5);
-    margin-right: 0;
-    padding-bottom: rem($gs-gutter * 4);
-    width: rem(220px);
+.fieldset__heading {
+    vertical-align: top;
+    padding: rem($gs-baseline / 2) rem($gs-baseline) rem($gs-baseline * 2) rem(10px);
 
     @include mq(tablet) {
-        width: auto;
-    }
-
-    @include mq(desktop) {
-        @include fs-headline(7);
-        margin-left: rem(gs-span(2));
-    }
-
-    @include mq(mem-full) {
-        margin-left: rem(gs-span(2) + $gs-gutter);
+        display: table-cell;
+        padding-right: rem($gs-gutter * 2);
+        width: gs-span(4) + $gs-gutter;
     }
 }
 
-.form__heading {
+.fieldset__headline {
     @include fs-header(3);
     margin-left: 0;
     margin-right: 0;
 }
 
-.form__note,
-.form-field__note {
-    @include fs-textSans(1);
+.fieldset__note {
+    @include fs-textSans(2);
     color: $c-neutral2;
-    padding-top: rem($gs-baseline / 2);
-    margin-bottom: rem(8px);
-}
-
-.fieldset {
-    border: 0;
-    border-top: rem(1px) solid $c-neutral3;
-    display: table;
-    padding: rem($gs-baseline / 2) rem($gs-gutter / 2);
-    margin: 0;
-    background-color: $c-neutral8;
-
-    @include mq(desktop) {
-        width: rem(gs-span(8));
-        margin-left: rem(gs-span(2));
-    }
-
-    @include mq(mem-full) {
-        width: rem(gs-span(9));
-        margin-left: rem(gs-span(2) + $gs-gutter);
-    }
-}
-
-.fieldset--slim {
-    margin-left: 0;
-
-    @include mq(desktop) {
-        width: rem(630px);
-    }
-}
-
-.fieldset--no-bg {
-    background: transparent;
-    padding-top: rem(5px);
-    padding-left: 0;
-    padding-right: 0;
-    border-top: 0;
-}
-
-.fieldset--top-border {
-    border-top: rem(1px) solid $c-neutral3;
-}
-
-.fieldset__heading {
-    vertical-align: top;
-
-    @include mq(tablet) {
-        display: table-cell;
-        padding-right: rem($gs-gutter * 2);
-        width: rem(gs-span(4) + 40);
-    }
-
-    @include mq(desktop) {
-        width: rem(gs-span(3));
-    }
-
-    @include mq(mem-full) {
-        width: rem(gs-span(4));
-    }
 }
 
 .fieldset__fields {
     vertical-align: top;
-    padding-top: rem($gs-gutter);
+    padding: rem(10px) rem(10px) rem($gs-baseline * 2);
 
     @include mq(tablet) {
         display: table-cell;
-        width: rem(gs-span(5));
-        padding-top: rem($gs-gutter + 15px);
-    }
-
-    @include mq(mem-full) {
-        width: rem(gs-span(5) + $gs-gutter);
+        width: gs-span(5);
+        padding-left: 0;
+        padding-top: rem($gs-gutter * 2);
     }
 }
 
-.fieldset__fields--no-padding {
-    padding-top: 0;
-}
 
-.form-fields-group .form-field {
-    margin-bottom: 0;
-}
-
+/* ==========================================================================
+   Form field
+   ========================================================================== */
 .form-field {
-    list-style: none;
-    margin: 0 0 rem($gs-gutter);
-    padding: 0;
-}
-
-.form-field__submit {
-    .form-field__note {
-        margin: 0 0 rem($gs-baseline * 2);
-        @include mq(desktop) {
-            float: right;
-            width: 60%;
-            margin: 0;
-        }
-    }
+    margin-bottom: rem($gs-baseline);
 }
 
 .form-field--no-margin {
-    margin: 0;
+    margin-bottom: 0;
 }
 
 .form-field--error {
@@ -188,8 +85,8 @@
         color: $newsRed;
     }
 
-    .text-input,
-    .text-input:focus {
+    .input-text,
+    .input-text:focus {
         border-color: $newsRed;
     }
 }
@@ -198,84 +95,50 @@
     @include fs-data(3);
     color: $newsRed;
     margin-top: rem(2px);
+    margin-bottom: rem($gs-baseline / 2);
 }
 
-// Allows for two up form field and label layout as in address form
-.form-field__half {
-    display: inline-block;
-    width: 50%;
-    padding-right: rem($gs-gutter);
-    &:last-of-type {
-        padding-right: 0;
-        padding-left: rem($gs-gutter);
-    }
+.form-note {
+    @include fs-textSans(1);
+    color: $c-neutral2;
+    padding-top: rem($gs-baseline / 2);
+    margin-bottom: rem(8px);
 }
 
-.form-field__error {
-    color: $newsRed;
-    margin-top: rem($gs-baseline / 2);
-}
-
-.form-field__note--below {
-    margin-bottom: 0;
-    margin-top: rem($gs-baseline / 2);
-}
-
-.form-field__note--left {
+.form-note--left {
     float: left;
 }
 
-.form-field__note--right {
+.form-note--right {
     float: right;
     margin-left: rem($gs-gutter);
 }
 
-.form-fields__inline {
-    ul {
-        margin: 0;
-        padding: 0;
-
-        .form-field {
-            display: inline-block;
-        }
-    }
-
-    .form-fields__heading {
-        @include fs-bodyHeading(3, true);
-        margin: 0 0 rem($gs-baseline);
-        display: block;
-    }
+.form-note--underneath {
+    margin-top: rem($gs-baseline / 2);
 }
 
-.form-fields--date-of-birth .form-field {
-    margin: 0 rem(18px) 0 0;
-}
-
+/* ==========================================================================
+   Form labels and inputs
+   ========================================================================== */
 .label {
     @include fs-bodyCopy(2);
     color: $c-neutral1;
     cursor: pointer;
     display: block;
-    margin-bottom: rem(6px);
 }
 
 .label--inline {
     display: inline-block;
 }
 
-.text-input,
-.textarea {
-    border: rem(1px) solid $c-neutral4;
-    @include box-shadow(none);
-    @include box-sizing(border-box);
+.input-text,
+.input-textarea {
+    border: 1px solid $c-neutral4;
     color: $c-body;
-    display: inline-block;
-    font-family: $f-sans-serif-text;
-    font-size: rem(16px);
+    @include fs-textSans(5);
     padding: rem(8px) rem(8px) rem(7px);
-    line-height: 1.4;
     outline: none;
-    @include border-radius(0);
     width: 100%;
     -webkit-appearance: none;
 
@@ -288,51 +151,16 @@
     }
 }
 
-.text-input--small {
+.input-text--small {
     width: 30%;
 }
 
-.text-input--block {
-    display: block;
-}
-
-.textarea {
+.input-textarea {
     resize: vertical;
 }
 
-.textarea--no-resize {
-    min-height: rem(($gs-baseline / 3) * 20);
-    resize: none;
-}
-
-.textarea--mid {
-    min-height: rem($gs-baseline * 9);
-}
-
-.textarea--long {
+.input-textarea--long {
     min-height: rem(($gs-baseline / 3) * 40);
-}
-
-.select-minimal {
-    border: 0;
-    outline: 0;
-    background-color: $white;
-    font-weight: bold;
-}
-
-[type=checkbox],
-[type=radio] {
-    float: left;
-    height: rem(13px);
-    margin-left: rem(-$gs-gutter);
-    margin-top: rem(3px);
-    width: rem(13px);
-}
-
-.inside-radio {
-    float: left;
-    margin-left: 0;
-    margin-right: rem(6px);
 }
 
 .optional-marker {
@@ -345,17 +173,127 @@
     }
 }
 
-.address-fieldset {
-    overflow: hidden;
+.select-minimal {
+    border: 0;
+    outline: 0;
+    background-color: $white;
+    font-weight: bold;
 }
 
-.password-strength-indicator {
-    background-color: #ebebeb;
-    height: rem(8px);
-    margin-top: rem(4px);
+.ts-and-cs {
+    @include fs-textSans(3);
+    color: $c-neutral2;
+}
+
+/* ==========================================================================
+   Psuedo radio form inputs
+   ========================================================================== */
+.psuedo-radio {
+    @include fs-textSans(3);
+    width: 100%;
+    border: 1px solid transparent;
+    padding: rem($gs-gutter) rem($gs-gutter) rem($gs-gutter) rem(36px);
     position: relative;
 
-    /* Indicator bar */
+    &:hover {
+        border: 1px solid $c-neutral2;
+    }
+
+    &:before {
+        @include radio-circle($c-neutral5);
+    }
+}
+
+input[type=radio]:checked + .psuedo-radio {
+    border-color: $mem-brandLightblue;
+
+    &:before {
+        @include radio-circle();
+    }
+}
+
+/* ==========================================================================
+   Payment titles
+   ========================================================================== */
+.payment-title {
+    @include fs-bodyHeading(2);
+}
+
+/* ==========================================================================
+   Billing address titles
+   ========================================================================== */
+
+.billing-address-choice {
+    @include fs-bodyCopy(2);
+}
+
+/* ==========================================================================
+   Card Detail
+   ========================================================================== */
+.form-padlock {
+    vertical-align: bottom;
+}
+
+.form-padlock-text {
+    @include fs-textSans(1);
+}
+
+/* ==========================================================================
+   Payment credit card types
+   ========================================================================== */
+$small-card: 32px;
+$large-card: 35px;
+$card-icon-offset: 1px;
+
+.credit-card-container {
+    position: relative;
+}
+
+.credit-card {
+    width: rem(54px);
+    height: $large-card;
+}
+
+.credit-card--input-visualisation {
+    position: absolute;
+    right: rem($card-icon-offset);
+    top: rem($card-icon-offset);
+}
+
+
+/* ==========================================================================
+   Credit card notes
+   ========================================================================== */
+.credit-card-note {
+    color: $c-neutral2;
+}
+
+.credit-card-note__header {
+    @include fs-textSans(3);
+    color: $c-neutral1;
+}
+
+.credit-card-input {
+    // bit messy but needs to account for outline plus icon offset
+    height: rem($large-card + $card-icon-offset + 2px);
+}
+
+/* ==========================================================================
+   Password Strength indicator
+   ========================================================================== */
+$password-strength-score-0: #e31f26;
+$password-strength-score-1: #e6711b;
+$password-strength-score-2: #ffbb00;
+$password-strength-score-3: #aad801;
+$password-strength-score-4: #33a22b;
+
+.password-strength-indicator {
+    background-color: $c-neutral5;
+    height: rem(8px);
+    margin-top: rem(4px);
+    margin-bottom: rem($gs-baseline * 2);
+    position: relative;
+
     &:after {
         bottom: 0;
         content: '';
@@ -365,42 +303,40 @@
         top: 0;
     }
 
-    &.score-0:after { width: 20%; background-color: #cc0a00; }
-    &.score-1:after { width: 40%; background-color: #ff4b00; }
-    &.score-2:after { width: 60%; background-color: #ff8b00; }
-    &.score-3:after { width: 80%; background-color: #00e643; }
-    &.score-4:after { width: 100%; background-color: #00b334; }
-
-    .password-strength {
-        display: inline-block;
-        height: rem(40px);
-        margin-top: rem(14px);
-    }
+    &.score-0:after { width: 20%; background-color: $password-strength-score-0; }
+    &.score-1:after { width: 40%; background-color: $password-strength-score-1; }
+    &.score-2:after { width: 60%; background-color: $password-strength-score-2; }
+    &.score-3:after { width: 80%; background-color: $password-strength-score-3; }
+    &.score-4:after { width: 100%; background-color: $password-strength-score-4; }
 }
 
+/* ==========================================================================
+   Cvc toggle
+   ========================================================================== */
 .cvc-cta {
     font-family: $f-sans-serif-text;
     font-size: rem(13px);
     line-height: rem(16px);
 }
 
-
 .cvc {
     font-family: $f-sans-serif-text;
     padding: rem($gs-baseline / 2) rem($gs-baseline / 2) rem($gs-baseline / 2) 0;
     font-size: rem(13px);
     line-height: rem(16px);
-    .cvc__primary {
-        float: left;
-    }
-    .cvc__secondary {
-        margin-left: rem(70px);
-    }
-    .cvc__heading {
-        font-weight: bold;
-        font-family: $f-sans-serif-text;
-        font-size: rem(13px);
-        line-height: rem(16px);
-    }
 }
 
+.cvc__image {
+    float: left;
+}
+
+.cvc__detail {
+    margin-left: rem(70px);
+}
+
+.cvc__heading {
+    font-weight: bold;
+    font-family: $f-sans-serif-text;
+    font-size: rem(13px);
+    line-height: rem(16px);
+}
