--- a/frontend/assets/stylesheets/components/_from-content-api.scss
+++ b/frontend/assets/stylesheets/components/_from-content-api.scss
@@ -120,3 +120,14 @@
     }
 
 }
+
+.text-link {
+    text-decoration: none;
+    border-bottom: 1px solid $c-neutral3;
+
+    &:hover,
+    &:focus {
+        text-decoration: none;
+        border-color: $c-neutral2;
+    }
+}
