--- a/frontend/assets/stylesheets/layout/_layout.scss
+++ b/frontend/assets/stylesheets/layout/_layout.scss
@@ -74,6 +74,10 @@ body {
     padding-bottom: rem($gs-gutter * 2);
 }
 
+.l-align-middle {
+    vertical-align: middle;
+}
+
 /* Containers
    ========================================================================== */
 
