--- a/frontend/assets/stylesheets/components/_event-items.scss
+++ b/frontend/assets/stylesheets/components/_event-items.scss
@@ -44,6 +44,7 @@
     }
     .event-item__meta {
         padding: rem($gs-gutter / 4);
+        padding-top: rem(($gs-gutter / 4) - 1px);
 
         @include mq(tablet) {
             height: auto;
@@ -73,19 +74,19 @@
     }
     .event-item__footer {
         width: 100%;
-        padding: rem($gs-gutter / 4);
+        padding-top: rem($gs-gutter / 4);
 
-        @include mq(tablet) {
+        @include mq(mobileLandscape) {
+            padding: rem($gs-gutter / 4);
             position: absolute;
             bottom: 0;
             left: 0;
-            right: 0;
         }
     }
     .event-item__action {
         position: absolute;
-        bottom: rem($gs-gutter / 4);
-        right: rem($gs-gutter / 4);
+        bottom: rem($gs-gutter / 4 + 1px);
+        right: rem(($gs-gutter / 4));
     }
     .event-item__price-amount {
         display: block;
@@ -130,12 +131,9 @@
             display: table-cell;
             vertical-align: top;
         }
-        .event-item__media {
-            padding-left: $gutter-width-fluid / 2;
-        }
         .event-item__content {
             position: relative;
-            width: 33.3%;
+            width: (33.3% + ($gutter-width-fluid / 2));
         }
         .event-item__footer {
             position: absolute;
@@ -193,7 +191,7 @@
 }
 
 .event-item--minimal {
-    @include mq(tablet) {
+    @include mq(mobileLandscape) {
         .event-item__container {
             height: rem(280px);
         }
@@ -232,45 +230,45 @@
         display: block;
     }
 }
-.event-snapshot__media,
-.event-snapshot__title {
-    margin-bottom: rem($gs-baseline / 2);
-}
-.event-snapshot__title {
-    @include fs-textSans(3);
-    font-weight: bold;
-
-    @include mq(mobileLandscape) {
-        @include fs-header(1);
+    .event-snapshot__media,
+    .event-snapshot__title {
+        margin-bottom: rem($gs-baseline / 2);
     }
-}
-.event-snapshot__media,
-.event-snapshot__content {
-    display: table-cell;
-    vertical-align: top;
+    .event-snapshot__title {
+        @include fs-textSans(3);
+        font-weight: bold;
 
-    @include mq(tablet) {
-        display: block;
+        @include mq(mobileLandscape) {
+            @include fs-header(1);
+        }
     }
-}
-.event-snapshot__content {
-    border-top: 1px solid $c-border-neutral;
-    padding-top: rem($gs-baseline / 2);
+    .event-snapshot__media,
+    .event-snapshot__content {
+        display: table-cell;
+        vertical-align: top;
 
-    @include mq(tablet) {
-        border: 0 none;
-        padding-top: 0;
+        @include mq(tablet) {
+            display: block;
+        }
     }
-}
-.event-snapshot__media {
-    width: 30%;
-    padding-right: $gutter-width-fluid;
+    .event-snapshot__content {
+        border-top: 1px solid $c-border-neutral;
+        padding-top: rem($gs-baseline / 2);
 
-    @include mq(tablet) {
-        width: auto;
-        padding-right: 0;
+        @include mq(tablet) {
+            border: 0 none;
+            padding-top: 0;
+        }
     }
-}
+    .event-snapshot__media {
+        width: 30%;
+        padding-right: $gutter-width-fluid;
+
+        @include mq(tablet) {
+            width: auto;
+            padding-right: 0;
+        }
+    }
 
 /* ==========================================================================
    Event Summary
